--- a/AryanITC.Infra.Data/AryanITC.Infra.Data.csproj
+++ b/AryanITC.Infra.Data/AryanITC.Infra.Data.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Elmah.MVC" Version="2.1.2" />
+    <PackageReference Include="ElmahCore" Version="2.1.2" />
     <PackageReference Include="HtmlSanitizer" Version="6.0.441" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
